--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,33 @@
 resources:
   containers:
   - container: dev1
+    image: ubuntu:14.04
+  - container: dev2
+    image: private:ubuntu14
+    endpoint: privatedockerhub
+  - container: dev3
     image: ubuntu:16.04
+    options: --cpu-count 4
+  - container: dev4
+    image: ubuntu:16.04
+    options: --hostname container-test --ip 192.168.0.1
+    localImage: true
+    env:
+      envVariable1: envValue1
+      envVariable2: envValue2
 jobs:
 - job: job_container
+  container: $[variables['runtimeContainer']]
   pool:
     name: default
-  container: dev1
+    matrix:
+      container_1:
+        runtimeContainer: dev1
+      container_2:
+        runtimeContainer: dev2
+      container_3:
+        runtimeContainer: dev3
+      container_4:
+        runtimeContainer: dev4
   steps:
   - script: printenv
