--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,33 +1,16 @@
-resources:
-  containers:
-  - container: dev1
-    image: ubuntu:14.04
-  - container: dev2
-    image: private:ubuntu14
-    endpoint: privatedockerhub
-  - container: dev3
-    image: ubuntu:16.04
-    options: --cpu-count 4
-  - container: dev4
-    image: ubuntu:16.04
-    options: --hostname container-test --ip 192.168.0.1
-    localImage: true
-    env:
-      envVariable1: envValue1
-      envVariable2: envValue2
-jobs:
-- job: job_container
-  container: $[variables['runtimeContainer']]
-  pool:
-    name: default
-    matrix:
-      container_1:
-        runtimeContainer: dev1
-      container_2:
-        runtimeContainer: dev2
-      container_3:
-        runtimeContainer: dev3
-      container_4:
-        runtimeContainer: dev4
-  steps:
+pool:
+  vmImage: 'ubuntu-16.04'
+
+strategy:
+  matrix:
+    ubuntu14:
+      containerImage: ubuntu:14.04
+    ubuntu16:
+      containerImage: ubuntu:16.04
+    ubuntu18:
+      containerImage: ubuntu:18.04
+
+container: $[ variables['containerImage'] ]
+
+steps:
   - script: printenv
