--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,16 @@
-pool:
-  vmImage: 'ubuntu-16.04'
-
-strategy:
-  matrix:
-    ubuntu14:
-      containerImage: ubuntu:14.04
-    ubuntu16:
-      containerImage: ubuntu:16.04
-    ubuntu18:
-      containerImage: ubuntu:18.04
-
-container: $[ variables['containerImage'] ]
-
-steps:
-  - script: printenv
+jobs:
+- job: Windows
+  pool:
+    vmImage: 'vs2017-win2016'
+  steps:
+  - script: echo hello from Windows
+- job: macOS
+  pool:
+    vmImage: 'macOS-10.13'
+  steps:
+  - script: echo hello from macOS
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - script: echo hello from Linux
