--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,18 @@
 jobs:
-- job: Windows
-  pool:
-    vmImage: 'vs2017-win2016'
+- job: A
   steps:
-  - script: echo hello from Windows
-- job: macOS
-  pool:
-    vmImage: 'macOS-10.13'
+  - script: exit 1
+
+- job: B
+  dependsOn: A
+  condition: true
   steps:
-  - script: echo hello from macOS
-- job: Linux
-  pool:
-    vmImage: 'ubuntu-16.04'
+  - script: echo this will run when A fails
+
+- job: C
+  dependsOn:
+  - A
+  - B
+  condition: false
   steps:
-  - script: echo hello from Linux
+  - script: echo this will run when B runs and succeeds
